Mnemosyne 2.3.1:

-Don't import cherrypy if not using the sync server (workaround for mimetype
 bug in non-unicode systems) (reported by Steven Lee, Pete Kovalenko).
 

Mnemosyne 2.3 : 2014-04-23

(Note that for Windows users we recommend uninstalling the previous version
before installing the new one.)

The sync protocol has changed in this version, so make sure you update both
the client and the server at the same time.

-A quick-and-dirty Android client is available, where you can do reviews in
 your mobile browser using a webserver which runs on your Android device.
 This client has full support for the syncing protocol.
-The functionality of mnemosyne-webserver has now been merged into the main
 program and can be activated through 'Configure Mnemosyne - servers'.
-Time to create backups has decreased, in some situations even by a factor 
 of 2 or more, speeding up syncing and program exit.
-Sped up all editing operations in the card browser.
-The name of the currently active saved set of cards is now listed in title
 bar (requested by Silverbear).
-Added new statistic: number of new cards learned per day.
-Also sync relevant settings (e.g. fonts, colours, ...) during the initial
 sync.
-Improve the timeout handling of the sync protocol.
-New Ukranian, Swedish, Serbian, Catalan translation.
-Fix erroneous 'Wrong username or password' error.
-Rework error handling when trying to load a database which no longer exists
 in its previous location.
-Keep the sort order in the card browser when editing cards (reported by
 Gnome and Tristan).
-Added command line options --sync-server and --web-server which starts the 
 sync and the web server in headless mode (i.e. without a GUI) (useful to run 
 e.g. on a NAS server).
-Fix more errors coming from loading config files (thanks to Alex Fevery for
 reporting this).
-Added an extra popup to guide new people better through the learning process
 (feedback from Bjorn Maes).